--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "grounded",
 	"version": "0.0.1",
 	"scripts": {
-		"start": "node index.js"
+		"gather": "node gatherMain.js",
+		"start": "node server.js"
 	},
 	"main": "index.js",
 	"dependencies": {
