--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FAILURE_XML=<error><code>ERR_ASSET_404</code><message>The specified asset could 
 CROSSDOMAIN=<cross-domain-policy><allow-access-from domain="*"/></cross-domain-policy>
 FILE_WIDTH=1000
 GATHER_THREADS=100
-GATHER_THRESH1=100000
+GATHER_THRESH1=250000000
 GATHER_THRESH2=328493000
 GATHER_THRESH3=400000000
 FILE_NUM_WIDTH=9
