Added different gather script.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"gather": "node gatherMain.js",
+		"gather2": "node gatherMain2.js",
 		"start": "node server.js"
 	},
 	"main": "index.js",
